# uatu

./: KDD_CUP_99_dataset_1.py  README.md  pyproject.toml
data/: Y_test.pkl  Y_train.pkl
models/: lr_gs.pkl  nb_gs.pkl  xgb_gs.pkl
