[tool.poetry]
name = "uatu"
version = "0.1.0"
description = ""
authors = ["p0lygun <solankivibhakar82@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
fastapi = "^0.105.0"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
scikit-learn = "^1.3.2"
joblib = "^1.3.2"
jupyter = "^1.0.0"
pandas = "^2.1.4"
matplotlib = "^3.8.2"
ydata-profiling = "^4.6.3"
notebook = "^7.0.6"
setuptools = "^69.0.2"
xgboost = "^2.0.2"
black = "^23.12.0"
prettytable = "^3.9.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.1"
ruff = "^0.1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
